--- a/src/blocks/image/image.css
+++ b/src/blocks/image/image.css
@@ -1,4 +1,10 @@
 .image {
     width: 100%;
     border: 1px solid var(--border-color);
+    background-image: url('../../static/images/image-placeholder-primary.svg');
+    background-repeat: no-repeat;
+}
+
+.image .theme_color_project-inverse {
+    background-image: url('../../static/images/image-placeholder-inverse.svg');
 }
