Edited layout, text blocks. Added some payment styles.

--- a/src/blocks/layout/layout.css
+++ b/src/blocks/layout/layout.css
@@ -1,5 +1,8 @@
-.layout__container_align_center {
+.layout {
     display: flex;
+}
+
+.layout__container_align_center {
     justify-content: center;
 }
 
