--- a/src/blocks/payment/payment.css
+++ b/src/blocks/payment/payment.css
@@ -6,4 +6,5 @@
     Скриншот: https://github.com/yndx-shri-reviewer/task-1/blob/master/assets/screenshots/payment.png
      */
     border: 3px solid var(--border-color);
+    padding-left: var(--space-xl);
 }
