--- a/src/blocks/text/text.css
+++ b/src/blocks/text/text.css
@@ -39,98 +39,98 @@
 }
 
 .text_view_primary {
-    color: var(--primary-text-color);
+    background-color: var(--primary-text-color);
 }
 
 .text_view_secondary {
-    color: var(--secondary-text-color);
+    background-color: var(--secondary-text-color);
 }
 
 .text_view_ghost {
-    color: var(--ghost-text-color);
+    background-color: var(--ghost-text-color);
 }
 
 .text_view_link {
-    color: var(--link-text-color);
+    background-color: var(--link-text-color);
 }
 
 /* FIXME: переделать проще */
-.text_size_s .text__word_width_s {
+.text_size_s.text__word_width_s {
     width: 20px;
 }
 
-.text_size_s .text__word_width_m {
+.text_size_s.text__word_width_m {
     width: 48px;
 }
 
-.text_size_s .text__word_width_l {
+.text_size_s.text__word_width_l {
     width: 100px;
 }
 
-.text_size_m .text__word_width_s {
+.text_size_m.text__word_width_s {
     width: 24px;
 }
 
-.text_size_m .text__word_width_m {
+.text_size_m.text__word_width_m {
     width: 56px;
 }
 
-.text_size_m .text__word_width_l {
+.text_size_m.text__word_width_l {
     width: 114px;
 }
 
-.text_size_l .text__word_width_s {
+.text_size_l.text__word_width_s {
     width: 28px;
 }
 
-.text_size_l .text__word_width_m {
+.text_size_l.text__word_width_m {
     width: 68px;
 }
 
-.text_size_l .text__word_width_l {
+.text_size_l.text__word_width_l {
     width: 138px;
 }
 
-.text_size_xl .text__word_width_s {
+.text_size_xl.text__word_width_s {
     width: 32px;
 }
 
-.text_size_xl .text__word_width_m {
+.text_size_xl.text__word_width_m {
     width: 74px;
 }
 
-.text_size_xl .text__word_width_l {
+.text_size_xl.text__word_width_l {
     width: 154px;
 }
 
-.text_size_xxl .text__word_width_s {
+.text_size_xxl.text__word_width_s {
     width: 36px;
 }
 
-.text_size_xxl .text__word_width_m {
+.text_size_xxl.text__word_width_m {
     width: 88px;
 }
 
-.text_size_xxl .text__word_width_l {
+.text_size_xxl.text__word_width_l {
     width: 184px;
 }
 
-.text_size_s .text__word {
+.text_size_s.text__word {
     height: 7px;
 }
 
-.text_size_m .text__word {
+.text_size_m.text__word {
     height: 8px;
 }
 
-.text_size_l .text__word {
+.text_size_l.text__word {
     height: 10px;
 }
 
-.text_size_xl .text__word {
+.text_size_xl.text__word {
     height: 11px;
 }
 
-.text_size_xxl .text__word {
+.text_size_xxl.text__word {
     height: 13px;
 }
