--- a/src/static/styles/style.scss
+++ b/src/static/styles/style.scss
@@ -1,4 +1,4 @@
-@import "../../blocks/theme/theme.css";
+@import "../../blocks/theme/theme";
 @import "../../blocks/layout/layout.css";
 @import "../../blocks/text/text.css";
 @import "../../blocks/payment/payment.css";
