--- a/src/blocks/baseBlocks/text/text.scss
+++ b/src/blocks/baseBlocks/text/text.scss
@@ -1,136 +1,85 @@
-.text_align_center {
-    text-align: center;
-}
+// .text {
 
-.text_size_s {
-    height: var(--font-height-s);
-}
+    
+// }
 
-.text_size_m {
-    height: var(--font-height-m);
-}
+// /* FIXME: переделать проще */
+// .text_size_s.text__word_width_s {
+//     width: 20px;
+// }
 
-.text_size_l {
-    height: var(--font-height-l);
-}
+// .text_size_s.text__word_width_m {
+//     width: 48px;
+// }
 
-.text_size_xl {
-    height: var(--font-height-xl);
-}
+// .text_size_s.text__word_width_l {
+//     width: 100px;
+// }
 
-.text_size_xxl {
-    height: var(--font-height-xxl);
-}
+// .text_size_m.text__word_width_s {
+//     width: 24px;
+// }
 
-.text_type_h1 {
-    margin: 15px 0 21px;
-}
+// .text_size_m.text__word_width_m {
+//     width: 56px;
+// }
 
-.text_type_h2 {
-    margin: 48px 0 20px;
-}
+// .text_size_m.text__word_width_l {
+//     width: 114px;
+// }
 
-.text_type_h3 {
-    margin: 43px 0 0;
-}
+// .text_size_l.text__word_width_s {
+//     width: 28px;
+// }
 
-.text_type_p {
-    margin: 15px 0 21px;
-}
+// .text_size_l.text__word_width_m {
+//     width: 68px;
+// }
 
-.text_view_primary {
-    background-color: var(--primary-text-color);
-}
+// .text_size_l.text__word_width_l {
+//     width: 138px;
+// }
 
-.text_view_secondary {
-    background-color: var(--secondary-text-color);
-}
+// .text_size_xl.text__word_width_s {
+//     width: 32px;
+// }
 
-.text_view_ghost {
-    background-color: var(--ghost-text-color);
-}
+// .text_size_xl.text__word_width_m {
+//     width: 74px;
+// }
 
-.text_view_link {
-    background-color: var(--link-text-color);
-}
+// .text_size_xl.text__word_width_l {
+//     width: 154px;
+// }
 
-/* FIXME: переделать проще */
-.text_size_s.text__word_width_s {
-    width: 20px;
-}
+// .text_size_xxl.text__word_width_s {
+//     width: 36px;
+// }
 
-.text_size_s.text__word_width_m {
-    width: 48px;
-}
+// .text_size_xxl.text__word_width_m {
+//     width: 88px;
+// }
 
-.text_size_s.text__word_width_l {
-    width: 100px;
-}
+// .text_size_xxl.text__word_width_l {
+//     width: 184px;
+// }
 
-.text_size_m.text__word_width_s {
-    width: 24px;
-}
+// .text_size_s.text__word {
+//     height: 7px;
+// }
 
-.text_size_m.text__word_width_m {
-    width: 56px;
-}
+// .text_size_m.text__word {
+//     height: 8px;
+// }
 
-.text_size_m.text__word_width_l {
-    width: 114px;
-}
+// .text_size_l.text__word {
+//     height: 10px;
+// }
 
-.text_size_l.text__word_width_s {
-    width: 28px;
-}
+// .text_size_xl.text__word {
+//     height: 11px;
+// }
 
-.text_size_l.text__word_width_m {
-    width: 68px;
-}
-
-.text_size_l.text__word_width_l {
-    width: 138px;
-}
-
-.text_size_xl.text__word_width_s {
-    width: 32px;
-}
-
-.text_size_xl.text__word_width_m {
-    width: 74px;
-}
-
-.text_size_xl.text__word_width_l {
-    width: 154px;
-}
-
-.text_size_xxl.text__word_width_s {
-    width: 36px;
-}
-
-.text_size_xxl.text__word_width_m {
-    width: 88px;
-}
-
-.text_size_xxl.text__word_width_l {
-    width: 184px;
-}
-
-.text_size_s.text__word {
-    height: 7px;
-}
-
-.text_size_m.text__word {
-    height: 8px;
-}
-
-.text_size_l.text__word {
-    height: 10px;
-}
-
-.text_size_xl.text__word {
-    height: 11px;
-}
-
-.text_size_xxl.text__word {
-    height: 13px;
-}
+// .text_size_xxl.text__word {
+//     height: 13px;
+// }
