--- a/src/blocks/baseBlocks/grid/grid.scss
+++ b/src/blocks/baseBlocks/grid/grid.scss
@@ -2,18 +2,50 @@
     display: grid;
     &_m-columns {
         &_12 {
-            grid-template-columns: repeat(12, 8.33%);
+            grid-template-columns: repeat(12, 1fr);
         }
         &_10 {
-            grid-template-columns: repeat(10, 8.33%);
+            grid-template-columns: repeat(10, 1fr);
         }
     }
     &_col-gap {
         &_two-thirds {
-            grid-gap: 5.5%;
+            grid-column-gap: calc(2 / 3 * var(--gap));
+        }
+        &_half {
+            grid-column-gap: calc(0.5 * var(--gap));
         }
         &_full {
-            grid-gap: 5.5%;
+            grid-column-gap: var(--gap);
+        }
+    }
+    &_row-gap {
+        &_half {
+            grid-row-gap: calc(0.5 * var(--gap));
+        }
+        &_full {
+            grid-row-gap: var(--gap);
+        }
+    }
+    @media (min-width: 1144px){
+        &__fraction {
+            &_m-col {
+                &_2 {
+                    grid-column: auto / span 2;
+                }
+                &_3 {
+                    grid-column: auto / span 3;
+                }
+                &_4 {
+                    grid-column: auto / span 4;
+                }
+                &_5 {
+                    grid-column: auto / span 5;
+                }
+                &_8 {
+                    grid-column: auto / span 8;
+                }
+            }
         }
     }
 }
